<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="degree">&#8451;</string>
    <string name="m_s"><sub>м/с</sub></string>
    <string name="weather_image_description">description</string>
    <string name="humidity">humidity</string>
    <string name="temperature">temperature</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather">weather</string>
    <string name="add_city">add city</string>
    <string name="application_label">application label</string>
    <string name="header_app_name">Weather Forecast</string>
    <string name="geekbrains_course">geekbrains.course@geekbrains.com</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="more_apps">More apps</string>
    <string name="rate_app">Rate app</string>
    <string name="language">Language</string>
    <string name="communicate">communicate</string>
    <string name="city">City</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="add">add</string>
    <string name="search">search</string>
    <string name="edit">edit</string>
    <string name="remove">remove last</string>
    <string name="send_sms">Send sms</string>
    <string name="call">Call</string>
    <string name="ok">Ok</string>
    <string name="humidity_sensor_description">Humidity sensor value =</string>
    <string name="temperature_sensor_description">Temperature sensor value =</string>
    <string name="absent_sensor">Your devise haven\'t</string>
    <string name="sensor">sensor</string>
    <string name="sensors">Phone sensors</string>

    <string-array name="cities">
        <item>Moscow:Russia</item>
        <item>Limassol:Cyprus</item>
        <item>Madrid:Spain</item>
        <item>Rome:Italy</item>
        <item>Paris:France</item>
        <item>Canberra:Australia</item>
        <item>Minsk:Belarus</item>
        <item>Brasilia:Brazil</item>
        <item>Ottawa:Canada</item>
        <item>Cairo:Egypt</item>
        <item>Dublin:Ireland</item>
        <item>Tokyo:Japan</item>
        <item>Lima:Peru</item>
    </string-array>

    <string-array name="additional_cities">
        <item>Yekaterinburg:Russia</item>
        <item>Saint-Petersburg:Russia</item>
        <item>Novosibirsk:Russia</item>
    </string-array>






</resources>
