<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_rate_app"
                android:icon="@drawable/ic_star"
                android:title="@string/rate_app"/>
            <item
                android:id="@+id/nav_more_apps"
                android:icon="@drawable/ic_assignment"
                android:title="@string/more_apps"/>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_contact"
                android:title="@string/about_us"/>
        </menu>
    </item>

</menu>